# maklercrm

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/bot/: main.py
app/bot/handlers/: admin.py  common.py  customer.py  property.py
app/bot/keyboards/: inline.py  reply.py
app/bot/middlewares/: auth.py  db.py
app/bot/states/: customer_states.py  property_states.py
app/core/: config.py  exceptions.py
app/database/: base.py  session.py
app/models/: __init__.py  audit.py  customer.py  property.py  user.py
app/repositories/: base.py  customer_repo.py  property_repo.py  user_repo.py
app/schemas/: __init__.py  customer.py  property.py  user.py
app/services/: ai_service.py  auth_service.py  customer_service.py  export_service.py  property_service.py  stats_service.py
migrations/: env.py
tests/: conftest.py
tests/test_services/: test_auth_service.py  test_property_service.py
