[project]
name = "nexora-crm"
version = "1.0.0"
description = "Enterprise Telegram-based CRM System"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.4.1",
    "sqlalchemy>=2.0.29",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "greenlet>=3.0.3",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "fpdf2>=2.7.8",
    "openai>=1.20.0",
    "anthropic>=0.25.1",
    "google-generativeai>=0.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.3.5",
    "black>=24.3.0",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
